Adds first class functions

--- a/lib/dune
+++ b/lib/dune
@@ -3,7 +3,7 @@
 
 (library
  (name toy_compiler)
- (modules ast anf closure parser lexer)
+ (modules ast anf closure parser lexer codegen)
  (preprocess
   (pps ppx_deriving.show ppx_deriving.ord sedlex.ppx))
- (libraries sedlex))
+ (libraries sedlex llvm llvm.analysis))
