--- a/lib/dune
+++ b/lib/dune
@@ -3,7 +3,7 @@
 
 (library
  (name toy_compiler)
- (modules ast anf closure parser lexer codegen)
+ (modules ast anf closure parser lexer driver codegen error loc)
  (preprocess
   (pps ppx_deriving.show ppx_deriving.ord sedlex.ppx))
- (libraries sedlex llvm llvm.analysis))
+ (libraries sedlex llvm llvm.analysis menhirLib))
