--- a/bin/dune
+++ b/bin/dune
@@ -1,4 +1,4 @@
 (executable
  (public_name toy_compiler)
  (name main)
- (libraries common middle_end syntax parsing menhirLib))
+ (libraries common middle_end syntax driver menhirLib cmdliner))
