--- a/toy_compiler.opam
+++ b/toy_compiler.opam
@@ -10,7 +10,7 @@ homepage: "https://github.com/username/reponame"
 doc: "https://url/to/documentation"
 bug-reports: "https://github.com/username/reponame/issues"
 depends: [
-  "ocaml"
+  "ocaml" {>= "4.10"}
   "dune" {>= "3.4"}
   "sedlex"
   "menhir"
